--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.15",
+    "lru-cache": "^5.1.1",
     "splaytree": "^3.0.1",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
+    "@types/lru-cache": "^5.1.0",
     "jest": "^24.9.0",
     "rollup": "^1.23.1",
     "rollup-plugin-terser": "^5.1.2",
