--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "tslint-no-focused-test": "^0.5.0",
+    "typedoc": "^0.15.0",
+    "typedoc-plugin-markdown": "^2.2.11",
     "typescript": "^3.6.3"
   },
   "jest": {
