--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nasi",
-  "version": "1.2.0-pre.7",
+  "version": "1.2.0",
   "description": "Common JS/TypeScript API",
   "main": "dist/cjs/index.js",
   "types": "dist/types/index.d.ts",
