--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "postbuild": "rollup -c rollup.config.js",
     "test": "jest",
-    "lint": "tslint --project .",
+    "lint": "eslint --ignore-path .gitignore --ext .ts,.tsx .",
+    "lint-deprecated": "tslint --project .",
     "prepublishOnly": "npm run lint && npm run build"
   },
   "repository": {
@@ -30,11 +31,15 @@
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
     "@types/lru-cache": "^5.1.0",
-    "jest": "^24.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.8.2",
+    "jest": "^25.5.3",
     "rollup": "^1.23.1",
     "rollup-plugin-terser": "^5.1.3",
     "terser": "^4.3.8",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^25.4.0",
     "tslint": "^5.20.0",
     "tslint-no-focused-test": "^0.5.0",
     "typedoc": "^0.15.0",
