--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "My M1 App Team",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.19",
+    "lodash": ">=4.17.19 <4.18.0",
     "lru-cache": "^5.1.1",
     "splaytree": "^3.0.1",
     "tslib": "^1.11.1"
